# cmake_learn

cmake_practice/t1/: CMakeLists.txt
cmake_practice/t2/: CMakeLists.txt
cmake_practice/t2/src/: CMakeLists.txt
cmake_practice/t3/: CMakeLists.txt
cmake_practice/t3/lib/: CMakeLists.txt  hello.cc  hello.hpp
cmake_practice/t4/: CMakeLists.txt
cmake_practice/t4/src/: CMakeLists.txt  main.cc
cmake_practice/t5/: CMakeLists.txt
cmake_practice/t5/src/: CMakeLists.txt  main.c
cmake_practice/t6/: CMakeLists.txt
cmake_practice/t6/cmake/: FindHELLO.cmake
cmake_practice/t6/src/: CMakeLists.txt  main.cc
cmake_tutorial/: CMakeLists.txt  TutorialConfig.h  tutorial.cc
cmake_tutorial/MathFunctions/: CMakeLists.txt  MakeTable.cc  MathFunctions.h  mysqrt.cc
