add_executable (curltest main.c)
#target_link_libraries (curltest curl)
find_package(CURL)
if (CURL_FOUND)
  INCLUDE_DIRECTORIES (${CURL_INCLUDE_DIR})
  target_link_libraries (curltest ${CURL_LIBRARY})
  message (STATUS "curl_include_dir is : ${CURL_INCLUDE_DIR}")
  message (STATUS "curl_library is: ${CURL_LIBRARY}")
  message (STATUS "cmake module path is: ${CMAKE_MODULE_PATH}")
else (CURL_FOUND)
  message (FATAL_ERROR "curl library not found")
endif (CURL_FOUND)
